Hotspot build is broken after push of 8197235

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 11
    • Affects Version/s: 11
    • Component/s: hotspot
    • None
    • b07
    • generic
    • generic

      /workspace/open/src/hotspot/share/classfile/javaClasses.hpp:109:21: error: inline function 'java_lang_String::length' is not defined [-Werror,-Wundefined-inline]
         static inline int length(oop java_string);
                           ^
      /workspace/open/src/hotspot/share/jvmci/jvmciCompilerToVM.cpp:387:25: note: used here
      if (java_lang_String::length(name()) <= 1) {
                             ^
      1 error generated.

      And this:

      /workspace/open/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:153:16: note: variable tracking size limit exceeded with -fvar-tracking-assignments, retrying without
      objArrayHandle CompilerToVM::initialize_intrinsics(TRAPS) {
                    ^

            Assignee:
            Vladimir Kozlov
            Reporter:
            Vladimir Kozlov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: