8199422: Hotspot build is broken after push of 8197235

Reviewed-by: shade, lfoltan